# set777

./: .gitignore  README.md  capacitor.config.ts  electron.cjs  index.html  package-lock.json  package.json
android-native/: settings.gradle
android-native/app/: build.gradle
android/app/: build.gradle
builds/: README.md  build-android.sh  build-linux.sh  build-windows.bat
desktop/: main.js  package.json  preload.js
docs/: SCALING_ROADMAP.md
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
linux-native/: meson.build
linux-native/src/: main.c
linux-native/src/data/: database.c  database.h  secure_storage.c
linux-native/src/network/: matrix_client.c  media_cache.c  offline_queue.c  room_operations.c  sync_service.c
linux-native/src/ui/: group_settings_window.c  login_window.c  main_window.c  profile_window.c  search_window.c  settings_window.c
linux-native/src/util/: helpers.c  system.c
linux-native/tests/: tests.c
public/: manifest.json  sw.js
scripts/: build-all-native.sh  build-android.sh  build-installers.sh
server/: .env.example  docker-compose.yml
server/admin-api/: package.json  server.js
server/coturn/: turnserver.conf
server/element/: config.json
server/monitoring/: alerts.yml
server/nginx/conf.d/: default.conf
server/postgres/: optimize.sql
server/scripts/: backup.sh  build-android.sh  cloudflare-setup.sh  ddos-monitor.sh  firewall.sh  fix-ssl.sh  generate-installers.sh  health-monitor.sh  migrate.sh  setup-fail2ban.sh  setup.sh  ssl-renew.sh  update.sh  watchdog.sh
server/synapse/: homeserver.yaml
src/: App.tsx  index.css  main.tsx
src/components/: AccountSettings.tsx  AdminPanel.tsx  AdvancedFeatures.tsx  AiAssistant.tsx  AutoReplyPage.tsx  BotApiPage.tsx  CallScreen.tsx  ChatSettings.tsx  ChatSidebar.tsx  ChatView.tsx  ContactsPage.tsx  CreateChatDialog.tsx  DocEditor.tsx  EmojiPicker.tsx  EmptyChat.tsx  ErrorBoundary.tsx  FeedPage.tsx  GifPicker.tsx  GroupSettingsDialog.tsx  MarketplacePage.tsx  MusicPage.tsx  NotificationsPage.tsx  PwaInstallBanner.tsx  QrLogin.tsx  RssReader.tsx  SchedulerPage.tsx  SecurityFeatures.tsx  SettingsTools.tsx  ShortsBar.tsx  ShortsPlatform.tsx  UserProfilePopup.tsx  VideoPage.tsx  WalletPage.tsx
src/data/: languages.ts  mockData.ts
src/lib/: MeshProvider.tsx  cache.ts  deviceSecurity.ts  errorCollector.ts  i18n.ts  matrix.ts  meshClient.ts  nativeStorage.ts  semanticSearch.ts
src/pages/: Index.tsx  Register.tsx
src/theme/: ThemeProvider.tsx
windows-native/Meshlink/: App.xaml  App.xaml.cs  Meshlink.csproj
windows-native/Meshlink.Tests/: MeshlinkTests.cs
windows-native/Meshlink/Helpers/: Utils.cs
windows-native/Meshlink/Models/: Models.cs
windows-native/Meshlink/Services/: ContentManager.cs  LocalDatabase.cs  MatrixClient.cs  MediaCache.cs  NotificationService.cs  SecureStorage.cs  Security.cs  SyncService.cs
(+90 files in other folders)
